Implementing GPU emulation and display output.
Started emulating the GPU and using Atma Framework to display it in a window. Currently nothing seems to work and all hell has broken loose. :)

--- a/BeefProj.toml
+++ b/BeefProj.toml
@@ -1,5 +1,5 @@
 FileVersion = 1
-Dependencies = {corlib = "*", CowieCLI = "*", "Atma.Json" = "*"}
+Dependencies = {corlib = "*", CowieCLI = "*", "Atma.Common" = "*"}
 
 [Project]
 Name = "BeefBoy"
